--- a/browser-use-python/pyproject.toml
+++ b/browser-use-python/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = ["httpx>=0.24", "pydantic>=2.0"]
 
 [project.optional-dependencies]
 dev = ["pytest>=7", "pyright>=1.1"]
+examples = ["python-dotenv>=1.0"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/browser_use_sdk"]
