--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -218,6 +218,18 @@ tasks:
       - echo "=== v3 changes ==="
       - diff snapshots/v3.json {{.OPENAPI_V3}} || true
 
+  # ── Docs ─────────────────────────────────────────────────────
+  docs:dev:
+    desc: Start Fern docs dev server
+    dir: fern
+    cmds:
+      - fern docs dev
+
+  docs:install:
+    desc: Install Fern CLI globally
+    cmds:
+      - npm install -g fern-api
+
   # ── Full Pipeline ─────────────────────────────────────────────
   update:
     desc: "Full mechanical pipeline: spec -> types -> check"
